java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint10.pass
package org.netbeans.test.java.hints;

import java.util.Collection;

public class AddCast10 {
    
    public AddCast10() {
    }
    
    private Collection<String> keys;
    
    public void getString() {
        String s =  (String) keys.toArray()[1];
    }
    
}
